fixed gap in about page

--- a/less/about.less
+++ b/less/about.less
@@ -1,16 +1,19 @@
 .banner-img{
     width: 100%;
     margin: 0;
+    padding: 0;
 }
 .banner {
     width: 100%;
     padding-bottom: 10px;    
     width: 100%;
     background: @fadedWhite;
+    margin: 0;
     h1{
         text-align: center;
         padding: 2%;
         font-size: 5.0rem;
+        margin: 0;
     }
 }
 
